remove empty environment.yml

--- a/notebooks/04_model_training.ipynb
+++ b/notebooks/04_model_training.ipynb
@@ -80,7 +80,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "d73913ed-5c90-4c1c-b566-03c27ec2c726",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
