--- a/notebooks/05_evaluation_metrics.ipynb
+++ b/notebooks/05_evaluation_metrics.ipynb
@@ -219,25 +219,255 @@
        "      <td>0.81</td>\n",
        "      <td>60</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>hog_pca</td>\n",
+       "      <td>inclusion</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>hog_pca</td>\n",
+       "      <td>patches</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>hog_pca</td>\n",
+       "      <td>pitted_surface</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>hog_pca</td>\n",
+       "      <td>rolled-in_scale</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>hog_pca</td>\n",
+       "      <td>scratches</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>crazing</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>inclusion</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>patches</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>pitted_surface</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>rolled-in_scale</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>edge</td>\n",
+       "      <td>scratches</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>crazing</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>inclusion</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>patches</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>pitted_surface</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>rolled-in_scale</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>hog_edge_pca</td>\n",
+       "      <td>scratches</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>crazing</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>inclusion</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>patches</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>pitted_surface</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>rolled-in_scale</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>hog</td>\n",
+       "      <td>scratches</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Combo            Label  Precision  Recall    F1  Support\n",
-       "0   hog_edge          crazing       0.69    0.95  0.80       60\n",
-       "1   hog_edge        inclusion       0.76    0.48  0.59       60\n",
-       "2   hog_edge          patches       0.81    0.63  0.71       60\n",
-       "3   hog_edge   pitted_surface       0.53    0.47  0.50       60\n",
-       "4   hog_edge  rolled-in_scale       0.59    0.92  0.72       60\n",
-       "5   hog_edge        scratches       0.41    0.32  0.36       60\n",
-       "6        raw          crazing       0.35    0.12  0.17       60\n",
-       "7        raw        inclusion       0.27    0.32  0.29       60\n",
-       "8        raw          patches       0.53    0.67  0.59       60\n",
-       "9        raw   pitted_surface       0.25    0.32  0.28       60\n",
-       "10       raw  rolled-in_scale       0.39    0.12  0.18       60\n",
-       "11       raw        scratches       0.23    0.38  0.29       60\n",
-       "12   hog_pca          crazing       0.75    0.87  0.81       60"
+       "           Combo            Label  Precision  Recall    F1  Support\n",
+       "0       hog_edge          crazing       0.69    0.95  0.80       60\n",
+       "1       hog_edge        inclusion       0.76    0.48  0.59       60\n",
+       "2       hog_edge          patches       0.81    0.63  0.71       60\n",
+       "3       hog_edge   pitted_surface       0.53    0.47  0.50       60\n",
+       "4       hog_edge  rolled-in_scale       0.59    0.92  0.72       60\n",
+       "5       hog_edge        scratches       0.41    0.32  0.36       60\n",
+       "6            raw          crazing       0.35    0.12  0.17       60\n",
+       "7            raw        inclusion       0.27    0.32  0.29       60\n",
+       "8            raw          patches       0.53    0.67  0.59       60\n",
+       "9            raw   pitted_surface       0.25    0.32  0.28       60\n",
+       "10           raw  rolled-in_scale       0.39    0.12  0.18       60\n",
+       "11           raw        scratches       0.23    0.38  0.29       60\n",
+       "12       hog_pca          crazing       0.75    0.87  0.81       60\n",
+       "13       hog_pca        inclusion       0.88    0.70  0.78       60\n",
+       "14       hog_pca          patches       0.64    0.60  0.62       60\n",
+       "15       hog_pca   pitted_surface       0.68    0.72  0.70       60\n",
+       "16       hog_pca  rolled-in_scale       0.79    0.88  0.83       60\n",
+       "17       hog_pca        scratches       0.79    0.75  0.77       60\n",
+       "18          edge          crazing       0.38    0.58  0.46       60\n",
+       "19          edge        inclusion       0.32    0.28  0.30       60\n",
+       "20          edge          patches       0.53    0.30  0.38       60\n",
+       "21          edge   pitted_surface       0.16    0.23  0.19       60\n",
+       "22          edge  rolled-in_scale       0.43    0.38  0.41       60\n",
+       "23          edge        scratches       0.36    0.25  0.29       60\n",
+       "24  hog_edge_pca          crazing       0.72    0.98  0.83       60\n",
+       "25  hog_edge_pca        inclusion       0.86    0.72  0.78       60\n",
+       "26  hog_edge_pca          patches       0.68    0.70  0.69       60\n",
+       "27  hog_edge_pca   pitted_surface       0.70    0.55  0.62       60\n",
+       "28  hog_edge_pca  rolled-in_scale       0.70    0.83  0.76       60\n",
+       "29  hog_edge_pca        scratches       0.73    0.58  0.65       60\n",
+       "30           hog          crazing       0.68    0.83  0.75       60\n",
+       "31           hog        inclusion       0.78    0.47  0.58       60\n",
+       "32           hog          patches       0.73    0.62  0.67       60\n",
+       "33           hog   pitted_surface       0.66    0.73  0.69       60\n",
+       "34           hog  rolled-in_scale       0.58    0.85  0.69       60\n",
+       "35           hog        scratches       0.47    0.35  0.40       60"
       ]
      },
      "execution_count": 6,
@@ -277,7 +507,9 @@
     "df = pd.DataFrame(results)\n",
     "\n",
     "# preview\n",
-    "df.head(13)"
+    "#df.head(13)\n",
+    "\n",
+    "df"
    ]
   },
   {
